fix spacings in the about page

--- a/landing/resources/css/about.css
+++ b/landing/resources/css/about.css
@@ -36,3 +36,7 @@
 .about-milestone-title .glyphicon {
     padding-right: 10px;
 }
+
+.about-main-container {
+    padding-right: 50px;
+}
